very slow playback if activated thee Auto normalization #74927

Closed
opened 2020-03-19 14:28:22 +01:00 by rafek yousef · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD FirePro D700 (FireGL V) ATI Technologies Inc. 4.5.13399 Core Profile Context FireGL 15.200.1060.0

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-18 23:49, hash: f70241deba
Worked: (newest version of Blender that worked as expected)

Short description of error
if I ISSUE OF NORMAL1.blend

Inkedblender_37vtpoDnBQ_LI.jpg activate the "Auto normalization" button, the 3d view goes very slow, this issue does not exist in blender 2.80, you could test it by using the blend file
by the way the issue appear only in the long time f-curves, as long as the f-curve is small the issue will be small but in long time it makes the speed gose down from 60 fps to 7 fps as shown in the blend file

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD FirePro [D700](https://archive.blender.org/developer/D700) (FireGL V) ATI Technologies Inc. 4.5.13399 Core Profile Context FireGL 15.200.1060.0 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-18 23:49, hash: `f70241deba` Worked: (newest version of Blender that worked as expected) **Short description of error** if I [ISSUE OF NORMAL1.blend](https://archive.blender.org/developer/F8415794/ISSUE_OF_NORMAL1.blend) ![Inkedblender_37vtpoDnBQ_LI.jpg](https://archive.blender.org/developer/F8415801/Inkedblender_37vtpoDnBQ_LI.jpg) activate the "Auto normalization" button, the 3d view goes very slow, this issue does not exist in blender 2.80, you could test it by using the blend file by the way the issue appear only in the long time f-curves, as long as the f-curve is small the issue will be small but in long time it makes the speed gose down from 60 fps to 7 fps as shown in the blend file **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @rfc

Added subscriber: @rfc
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
[might be a necessary fix involved here since 2.80, so not sure this is a bug, checking...]

Can confirm. [might be a necessary fix involved here since 2.80, so not sure this is a bug, checking...]
Philipp Oeser self-assigned this 2020-03-20 15:35:13 +01:00

This issue was referenced by d0b0a0a894

This issue was referenced by d0b0a0a894e0a8c030128e62cab1b8169d344bf2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74927
No description provided.